Feat/agents (#324)
* agent runner poc

* basic orchestrator that reacts to task events and launches claude

* better error handling
